--- a/index.html
+++ b/index.html
@@ -13,22 +13,18 @@
     <title>Bootstrap Navbar</title>
   </head>
   <body>
-    <nav class= "navbar, navbar-dark, navbar-expand-sm, and bg-dark"></nav>
+    <nav class= "navbar navbar-dark navbar-expand-sm  bg-dark">
     <div class="container">
       <button class="navbar-toggler bg-light" data-toggle="collapse" data-target="mainNav">
         <span class="navbar-toggle-icon"></span>
       </button>
-      </div>
       <div class="collapse navbar-collapse" id="mainNav">
-        <div class="navbar-nav">
-
-  <a href="#" class="navbar-brand">The Hair Freedom Club</a>
-      <a href="#" class="nav-item nav-link">Faux Locs</a>
-      <a href="#" class="nav-item nav-link">Interlocs</a>
-      <a href="#" class="nav-item nav-link">Braidlocs</a>
-      <a href="#" class="nav-item nav-link">Twistlocs</a>
-</div>
-
+          <a href="#" class="navbar-brand">The Hair Freedom Club</a>
+          <a href="#" class="nav-item nav-link active text-white ">Faux Locs</a>
+          <a href="#" class="nav-item nav-link text-white">Interlocs</a>
+          <a href="#" class="nav-item nav-link text-white">Braidlocs</a>
+          <a href="#" class="nav-item nav-link text-white">Twistlocs</a>       
+      </div>
 
 </nav>
     
